--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,21 @@
+:root{
+  
+  --color1: #74acdf;
+  --color2: lightgrey;
+  --color3: #f6b40e;
+  --color4: #7e1c64;
+  --color5: #a17722;
+  --bg-color: rgb(28, 28, 36);
+  --text-color: var(--color5);
+}
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 a {
